version/0.5/_sources/api/ansys/geometry/core/tools/index.rst.txt






The ``tools`` package 
=========================

.. py:module:: ansys.geometry.core.tools


Summary
-------








.. py:currentmodule:: tools
.. tab-set::


    .. tab-item:: Submodules

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.geometry.core.tools.measurement_tools`
            - Provides tools for measurement.


          * - :py:obj:`~ansys.geometry.core.tools.problem_areas`
            - The problem area definition.


          * - :py:obj:`~ansys.geometry.core.tools.repair_tool_message`
            - Module for repair tool message.


          * - :py:obj:`~ansys.geometry.core.tools.repair_tools`
            - Provides tools for repairing bodies.












.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-fa-file"></span> measurement_tools</api/ansys/geometry/core/tools/measurement_tools/index>
    <span class="nf nf-fa-file"></span> problem_areas</api/ansys/geometry/core/tools/problem_areas/index>
    <span class="nf nf-fa-file"></span> repair_tool_message</api/ansys/geometry/core/tools/repair_tool_message/index>
    <span class="nf nf-fa-file"></span> repair_tools</api/ansys/geometry/core/tools/repair_tools/index>











Description
-----------


PyAnsys Geometry tools subpackage.
















..
    !! processed by numpydoc !!





